[package]
name = "broke_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
rayon = "1"

[profile.release]
strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1

[lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"
